@@ -1,0 +1,12 @@
+#objdump: -sw
+#name: VAX flonum test
+
+.*:     file format .*
+
+Contents of section .data:
+ 0000 fc3e5bd3 9e401006 1641751f 5d41e23b  .*
+ 0010 5d2e5de1 9241272c 37a6ce36 b5418cb9  .*
+ 0020 287e0b24 3b40f227 c83c2bde 3f407b8f  .*
+ 0030 069ee40f 0440d61c 4ce09205 3810675c  .*
+ 0040 e3df062a 04406520 db16d80d d72f205e  .*
+ 0050 c746ae64                             .*
