@@ -1,0 +1,12 @@
+.data
+
+.float		0.12345
+.ffloat		1.23456
+.f_floating	2.34567
+.double		3.45678
+.dfloat		4.56789
+.d_floating	5.67890
+.gfloat		6.78901
+.g_floating	7.89012
+.hfloat		8.90123
+.h_floating	9.01234
