@@ -1,5 +1,9 @@
 -*- text -*-
 
+* Support the .f_floating, .d_floating, .g_floating and .h_floating directives
+  for the VAX target in order to be more compatible with the VAX MACRO
+  assembler.
+
 * New command line option -mtune=[itanium1|itanium2] for IA64 targets.
 
 Changes in 2.16:
